src/objects/Note__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_to_Show_Notes_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>You are posting this note to the portal. Are you sure you would like to continue?</description>
        <inlineHelpText>Please check this checkbox to confirm that you are posting this note to the portal</inlineHelpText>
        <label>Confirm to Post Note to Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_of_AE_for_Loan__c</fullName>
        <label>Email of AE for Loan</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_of_PCS_at_Loan_Level__c</fullName>
        <label>Email of PCS at Loan Level</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_of_PCS_at_Partner_Level__c</fullName>
        <label>Email of PCS at Partner Level</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LoanId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LoanId</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Email__c</fullName>
        <label>Loan Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loan_Processor_Email__c</fullName>
        <label>Loan Processor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notify_Primary_Loan_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox to send an email to the primary loan contact notifying him/her of the new note on the loan</inlineHelpText>
        <label>Notify Primary Loan Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Client_Name__c</fullName>
        <formula>Loan_Id__r.Client_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <label>User Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Portal Note</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Portal_Notes</fullName>
        <columns>NAME</columns>
        <columns>Loan_Id__c</columns>
        <columns>Related_Client_Name__c</columns>
        <columns>Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Portal Notes</label>
    </listViews>
    <validationRules>
        <fullName>Checkbox_must_be_checked_confirmation</fullName>
        <active>true</active>
        <description>Please check this checkbox to confirm that you are posting this note to the portal.</description>
        <errorConditionFormula>!Confirm_to_Show_Notes_in_Portal__c</errorConditionFormula>
        <errorDisplayField>Confirm_to_Show_Notes_in_Portal__c</errorDisplayField>
        <errorMessage>Please check this checkbox to confirm that you are posting this note to the portal.</errorMessage>
    </validationRules>
</CustomObject>